# mnemonic-reader

./: .gitignore  Makefile  README.md  index.html  main.js  package-lock.json  package.json  renderer.js
mnemonic/: api.py  pyproject.toml
